Fixed margin spacing issue to center technology content on very wide screens.

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -174,6 +174,7 @@ main {
   position: relative;
   z-index: 1;
   width: 100%;
+  margin: auto;
   @include page-fade;
 }
 
